# elements

./: CMakeLists.txt  README.md  main.cpp
docs/: class_diagram.gaphor
include/elements/: app.h  bool.h  display.h  element.h  memory.h  number.h  package.h  separator.h  text.h  types.h
src/: types.cpp
src/imgui/: imgui_app.cpp  imgui_bool.cpp  imgui_display.cpp  imgui_memory.cpp  imgui_number.cpp  imgui_package.cpp  imgui_separator.cpp  imgui_text.cpp
